# progpar-project

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  bench.py
cmake/Modules/: FindGLFW.cmake
data/: benches.csv  benches_omp.csv
lib/Catch2/include/: catch.hpp
src/common/core/: Bodies.cpp  Bodies.hpp  SimulationNBodyInterface.cpp  SimulationNBodyInterface.hpp
src/common/ogl/: OGLControl.cpp  OGLControl.hpp  OGLSpheresVisu.cpp  OGLSpheresVisu.hpp  OGLSpheresVisuGS.cpp  OGLSpheresVisuGS.hpp  OGLSpheresVisuInst.cpp  OGLSpheresVisuInst.hpp  OGLTools.cpp  OGLTools.hpp  SpheresVisu.hpp  SpheresVisuNo.cpp  SpheresVisuNo.hpp
src/common/ogl/shaders/: fragment130.glsl  fragment130_color.glsl  fragment150.glsl  fragment330.glsl  fragment330_color.glsl  fragment330_color_v2.glsl  geometry150.glsl  geometry330.glsl  geometry330_color.glsl  geometry330_color_v2.glsl  vertex130.glsl  vertex130_color.glsl  vertex150.glsl  vertex330.glsl  vertex330_color.glsl  vertex330_color_v2.glsl
src/common/utils/: ArgumentsReader.cpp  ArgumentsReader.hpp  Perf.cpp  Perf.hpp
src/murb/: main.cpp
src/murb/implem/: SimulationNBodyArray.cpp  SimulationNBodyArray.hpp  SimulationNBodyCuda.cpp  SimulationNBodyCuda.hpp  SimulationNBodyCudaNaive.cpp  SimulationNBodyCudaNaive.cu  SimulationNBodyCudaNaive.hpp  SimulationNBodyCudaOptim1.cu  SimulationNBodyCudaOptim1.hpp  SimulationNBodyCudaOptim2.cu  SimulationNBodyCudaOptim2.hpp  SimulationNBodyCudaOptim3.cu  SimulationNBodyCudaOptim3.hpp  SimulationNBodyHetero.cpp  SimulationNBodyHetero.hpp  SimulationNBodyNaive.cpp  SimulationNBodyOCL.cpp  SimulationNBodyOCL.hpp  SimulationNBodyOCLNaive.cpp  SimulationNBodyOCLNaive.hpp  SimulationNBodyOCLOptim1.hpp  SimulationNBodyOptim1.cpp  SimulationNBodyOptim1.hpp  SimulationNBodyOptim1Approx.cpp  SimulationNBodyOptim1Approx.hpp  SimulationNBodySimd.cpp  SimulationNBodySimd.hpp  SimulationNBodySimdNaive.cpp  SimulationNBodySimdNaive.hpp  SimulationNBodySimdOMP.cpp  SimulationNBodySimdOMP.hpp  SimulationNBodySimdOMPNaive.cpp  SimulationNBodySimdOMPNaive.hpp  SimulationNBodySimdOptim1.cpp  SimulationNBodySimdOptim1.hpp  SimulationNBodySimdOptim2.cpp  SimulationNBodySimdOptim2.hpp  kernel.cl  kernelCuda.cu  kernel_compute_acceleration.cl
src/test/: main.cpp
src/test/implem/: array.cpp  cuda.cpp  cuda_optim1.cpp  cuda_optim2.cpp  cuda_optim3.cpp  dumb.cpp  hetero.cpp  ocl.cpp  optim1.cpp  optim1_approx.cpp  simd.cpp  simd_omp.cpp  simd_optim1.cpp  simd_optim2.cpp
src/test/implem/implem/: dumb.cpp  optim1.cpp  optim1_approx.cpp  simd.cpp  simd_omp.cpp  simd_optim1.cpp  simd_optim2.cpp
